Parser/new_grammar
<program> --> <data decls> <func list> 

<func list> --> empty 
				| <func> <func list>

<func> --> <func decl> semicolon 
				| <func decl> left_brace <data decls> <statements> right_brace		// Refactor

<func decl> --> <type name> ID left_parenthesis <parameter list> right_parenthesis

<type name> --> int 
				| void 
				| binary 
				| decimal  
